--- a/TODO.txt
+++ b/TODO.txt
@@ -5,22 +5,22 @@ clean_table
 Test_git
 
 *****************TODO Things*********************
--[Arg_checker]		 ----		I think is OK
--[Set_table] 	Do we actually need to convert to microseconds (ie. multiply it by 1000)?
--[Init] How to initialize?	----- Looks like OK
--[Algorithm] structure the algorithm in taking the forks so there is no deadlock ---> Looks like OK
+-[Arg_checker]		 ----		I think is OK ✅
+-[Set_table] 	Do we actually need to convert to microseconds (ie. multiply it by 1000)? ❌
+-[Init] How to initialize?	----- Looks like OK ✅
+-[Algorithm] structure the algorithm in taking the forks so there is no deadlock ---> Looks like OK ✅
 -[Starvation]	--> Apparently this manner can cause starvation --> Maybe we should force the philos to think
-																	a fraction of the time
--[Error_checking] Check errors for thread init and thread join, at least
+																	a fraction of the time  ❌
+-[Error_checking] Check errors for thread init and thread join, at least  ❌
 -[Print function, data races] 	Since we changed the print function, 
 								so it has all the actions, there are data races, 
-								look where we need to put the mutex at				--- Do we actually need it?
+								look where we need to put the mutex at			❌	--- Do we actually need it?
 -[Waiter - Monitor] We need a thread with its routine 
-					to control every philosopher while they eat	----	Looks like OK
--[Clean_table] Function to clean the table and finish the program	--	TODO
--[Timestamps] We need to properly set the time when philos eat, sleep and think	--	TODO
+					to control every philosopher while they eat	----	Looks like OK ✅
+-[Clean_table] Function to clean the table and finish the program	--	Guess its OK ✅
+-[Timestamps] We need to properly set the time when philos eat, sleep and think	--	Guess its OK ✅
 -[Times_must_eat] 	Change the hardcode that we have 
-					so philos eat indefenitely if no "times_must_eat" is declared	--	TODO
+					so philos eat indefenitely if no "times_must_eat" is declared	--	TODO  ❌
 
 ------------------------------DETALLES--------------------------------------
 Makefile:
