--- a/TODO.txt
+++ b/TODO.txt
@@ -10,8 +10,8 @@ Test_git
 -[Init] How to initialize?	----- Looks like OK ✅
 -[Algorithm] structure the algorithm in taking the forks so there is no deadlock ---> Looks like OK ✅
 -[Starvation]	--> Apparently this manner can cause starvation --> Maybe we should force the philos to think
-																	a fraction of the time  ❌ --> Still not needed
--[Error_checking] Check errors for thread init and thread join, at least  ❌
+																	a fraction of the time  ✅ --> Still not needed
+-[Error_checking] Check errors for thread init and thread join, at least  ❌	---> Valgrind and Helgrind
 -[Print function, data races] 	Since we changed the print function, 
 								so it has all the actions, there are data races, 
 								look where we need to put the mutex at			✅	--- Do we actually need it?
@@ -24,8 +24,9 @@ Test_git
 -[philo_info]	Probably we need to add a ptr of the table to each philo, even if I didnt want to ✅
 -[1 philo function] -- Implement the case where there is only one philo ❌
 -[Timestamp]	--	Current time in ms --- Do we need to set at 0 with "start time?" ✅
--[DEATHS]	--	How do we do to make philos stop eating once there is someone dead? 
--[KEEP_EATING]	--	IF some of them have eaten X times, maybe they need to keep eating until the last one finishes to avoid death ❌
+-[DEATHS]	--	How do we do to make philos stop eating once there is someone dead? ✅	<--- with a flag "end_simulation", and each philo needs to check everytime they do an action
+-[KEEP_EATING]	--	IF some of them have eaten X times, maybe they need to keep eating until the last one finishes to avoid death ✅
+-[REFACTOR] 	--	We need to refactor functions and sort them 
 
 ------------------------------DETALLES--------------------------------------
 Makefile:
